--- a/src/index.scss
+++ b/src/index.scss
@@ -6,5 +6,10 @@
 }
 
 body {
+  width: 100%;
+  height: 100vh;
+  background: url("./assets/images/radient-background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
   font-family: "Montserrat", sans-serif;
 }
