--- a/src/index.scss
+++ b/src/index.scss
@@ -5,8 +5,5 @@
 
 body {
   width: 100%;
-  height: 100vh;
-  background: url("./assets/images/radient-background.png");
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: whitesmoke;
 }
