--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,2 +1,5 @@
 // Variable for media breakpoints
-$breakpoint-phone: 375px;
+$breakpoint-phone: 507px;
+$breakpoint-tablet: 1024px;
+$color-primarybg: #314e71;
+$color-secondbg: #c8e3fa;
