--- a/src/components/LandingPage/landingpage.module.scss
+++ b/src/components/LandingPage/landingpage.module.scss
@@ -1,49 +1,99 @@
 @import "./../../assets/scss/variables.scss";
 
 .landing {
-  height: 100vh;
+  padding: 0 2rem;
 
   &Center {
-    border: 1px solid red;
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    height: 850px;
+    position: relative;
   }
 
   &Heading {
-    color: white;
-    margin-right: 2rem;
-    text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.411);
+    margin-right: 5rem;
+  }
 
-    h1 {
-      font-weight: 400;
-    }
+  &Name {
+    color: black;
+    font-weight: 400;
+    text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.411);
+  }
+
+  &Quote {
+    text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.411);
   }
 
   &IconGuy {
-    margin-right: 20%;
-    width: 30vw;
-    max-width: 50vh;
+    margin-right: 7rem;
+    align-self: flex-end;
+  }
+
+  &FeatureGroup {
+    box-shadow: 0 -5px 5px -5px rgba(51, 51, 51, 0.479);
+    background-color: $color-secondbg;
+    display: flex;
+    height: 520px;
+  }
+
+  &Feature {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 50%;
+    margin: 2rem;
+    padding: 1rem;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+
+    &:hover {
+      box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+        0 10px 10px rgba(0, 0, 0, 0.22);
+    }
+
+    h2 {
+      margin-top: 3rem;
+    }
+
+    p {
+      margin-top: 3rem;
+      text-align: center;
+    }
   }
 }
 
-@media only screen and (max-width: $breakpoint-phone) {
-  .landing {
-    height: 100%;
+// @media only screen and (max-width: $breakpoint-phone) {
+//   .landing {
+//     &Center {
+//       height: 250px;
+//     }
 
-    &Center {
-      height: 250px;
-    }
+//     &Heading {
+//       font-size: 14px;
+//     }
 
-    &Heading {
-      font-size: 14px;
-      margin-right: 0;
-    }
+//     &IconGuy {
+//       //   margin-right: 0;
+//       align-self: flex-end;
+//       width: 150px;
+//     }
+//   }
+// }
 
-    &IconGuy {
-      margin-right: 0;
-      align-self: flex-end;
-      width: 150px;
-    }
-  }
-}
+// @media only screen and (max-width: $breakpoint-tablet) {
+//   .landing {
+//     &Heading {
+//       margin-right: 0;
+//     }
+
+//     &Name {
+//       font-size: 70px;
+//     }
+
+//     &IconGuy {
+//       margin-right: 0;
+//     }
+//   }
+// }
