--- a/src/components/DashBoard/dashboard.module.scss
+++ b/src/components/DashBoard/dashboard.module.scss
@@ -1,8 +1,8 @@
 .dashboard {
-  margin-top: 3rem;
-  padding: 0 2rem;
+  height: 100vh;
   color: white;
-  background: rgba(0, 0, 0, 0.5);
+  padding: 3rem 2rem;
+  background: rgba(0, 0, 0, 0.2);
 
   table {
     color: white;
