feat: set up of search tool and fetching data

--- a/src/components/SearchTool/searchtool.module.scss
+++ b/src/components/SearchTool/searchtool.module.scss
@@ -1,4 +1,9 @@
 .searchTool {
+  color: white;
+  padding: 0 2rem;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.2);
+
   &SearchContainer {
     position: relative;
     justify-content: flex-end;
@@ -50,7 +55,22 @@
 
   &RadioLabel {
     margin-left: 10px;
-    color: white;
+
     font-weight: 500;
+  }
+
+  table {
+    margin-top: 20px;
+    color: white;
+  }
+
+  i {
+    font-size: 20px;
+    cursor: pointer;
+
+    &:hover {
+      transition: all 0.2s ease-in-out;
+      color: rgb(185, 185, 185);
+    }
   }
 }
